backend/src/parsers/snapshots/agent_zero_backend__parsers__tests__rew_788_w8th.snap
---
source: src/parsers/tests.rs
expression: property
---
{
  "id": 0,
  "title": "For Sale: L01-788 W 8th Avenue, Vancouver, BC",
  "description": "Browse 23 photos of this Townhouse in Fairview, Vancouver listed for $1,249,900. This property features 3 beds, 4 baths and is 1560 Sqft. MLS® # R3086230",
  "price": 1249900,
  "price_currency": "CAD",
  "offer_price": null,
  "street_address": "L01-788 W 8th Avenue",
  "city": "Fairview",
  "region": "BC",
  "postal_code": "V5Z 1E1",
  "country": "Canada",
  "lat": 49.2642384857,
  "lon": -123.1214674577,
  "bedrooms": 3,
  "bathrooms": 3,
  "sqft": null,
  "year_built": 1991,
  "parking_garage": 2,
  "parking_covered": null,
  "parking_open": null,
  "land_sqft": null,
  "radiant_floor_heating": null,
  "ac": null,
  "skytrain_station": null,
  "skytrain_walk_min": null,
  "property_tax": 4762,
  "hoa_monthly": 1137,
  "down_payment_pct": null,
  "mortgage_interest_rate": null,
  "amortization_years": null,
  "mortgage_monthly": null,
  "monthly_total": null,
  "monthly_cost": null,
  "has_rental_suite": null,
  "rental_income": null,
  "school_elementary": null,
  "school_elementary_rating": null,
  "school_middle": null,
  "school_middle_rating": null,
  "school_secondary": null,
  "school_secondary_rating": null,
  "redfin_url": null,
  "realtor_url": null,
  "rew_url": "https://www.rew.ca/properties/l01-788-w-8th-avenue-vancouver-bc",
  "zillow_url": null,
  "status": null,
  "notes": null,
  "images": [
    {
      "id": 0,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_f8b722bbfcdcaf0768a78b1ca0778f86.jpeg",
      "created_at": ""
    },
    {
      "id": 1,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_fa7507e4ffdb1519c1fe0a3f1e8a6c81.jpeg",
      "created_at": ""
    },
    {
      "id": 2,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_a0140f25f94a18ab5ae0cb2e58422182.jpeg",
      "created_at": ""
    },
    {
      "id": 3,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_e9d946bbef2fc37da90e1d29e3668759.jpeg",
      "created_at": ""
    },
    {
      "id": 4,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_0b7f7fab47de7c73b9d2be07088d75d7.jpeg",
      "created_at": ""
    },
    {
      "id": 5,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_d28057e8d8343e2da0f12ae846b0f62a.jpeg",
      "created_at": ""
    },
    {
      "id": 6,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_16f4ef0c0f563e3e4c09aadec109ba27.jpeg",
      "created_at": ""
    },
    {
      "id": 7,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_50e0c28ed9072196f7aa7c3441628b42.jpeg",
      "created_at": ""
    },
    {
      "id": 8,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_88f5e9bb7b598aacadf26ba8c1b23eac.jpeg",
      "created_at": ""
    },
    {
      "id": 9,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_374431feea08506ec94fad8f5e740340.jpeg",
      "created_at": ""
    },
    {
      "id": 10,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_97165485b75945f963e886a36d1f652c.jpeg",
      "created_at": ""
    },
    {
      "id": 11,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_9461ed1d4c82b3a4693ace2578b94aec.jpeg",
      "created_at": ""
    },
    {
      "id": 12,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_08f69e9e10f158b1e04fe3b29a4286b7.jpeg",
      "created_at": ""
    },
    {
      "id": 13,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_f6bbf7a06496480a1cf45b76b81f979a.jpeg",
      "created_at": ""
    },
    {
      "id": 14,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_a7ab0c98bf39e7f2ed9d8d3dd964ac24.jpeg",
      "created_at": ""
    },
    {
      "id": 15,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_4a2ad4763a9a0726560537ec7b635ccb.jpeg",
      "created_at": ""
    },
    {
      "id": 16,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_44ff68351f566991c4bfb6ef0dea0b00.jpeg",
      "created_at": ""
    },
    {
      "id": 17,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_43c652b43f836cb1d9da71e372fd1f26.jpeg",
      "created_at": ""
    },
    {
      "id": 18,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_37a91739fcadf492c20cef7c02c95ce0.jpeg",
      "created_at": ""
    },
    {
      "id": 19,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_cdd76dd8a0923dd8a2a7840a12a36156.jpeg",
      "created_at": ""
    },
    {
      "id": 20,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_49a303eeb8e94747afe12f2f7d1d97ac.jpeg",
      "created_at": ""
    },
    {
      "id": 21,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_266c899a530065608fc51ac6be209065.jpeg",
      "created_at": ""
    },
    {
      "id": 22,
      "url": "https://assets-listings.rew.ca/listing/brc_idx_rew/263107857/00_dfa8fc380ec2179da686e77847117d3e.jpeg",
      "created_at": ""
    }
  ],
  "created_at": "",
  "updated_at": null
}
